--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -25,7 +25,7 @@
       </ng-container>
 
       <ng-container *ngIf="imagesData && imagesData.length === 0">
-        <p class="p--text">No viral mages found.</p>
+        <p class="p--text">No viral images found.</p>
       </ng-container>
 
     </div>
